test/pos/schema-minimal-valid.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name minimal-example

document
  field name required
    scalar string
  field age
    scalar string
